# pyspect

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: compare_inversion.py  fraction.py  inversion.py  reinvert.py
src/airel/pyspect/: __init__.py  fractions.py  millikan.py
src/airel/pyspect/datafiles/: __init__.py  comments_files.py  conversion.py  recordsfiles.py  recordwriter.py  util.py
src/airel/pyspect/inversion/: __init__.py  inversion.py
src/pyspect/: millikan.py
src/pyspect/datafiles/: __init__.py  recordsfiles.py  util.py
src/pyspect/inversion/: inversion.py
